# webeep-cli

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  main.rs
src/controller/: controller.rs  mod.rs
src/model/: course.rs  mod.rs
src/utils/: html_parser.rs  http_client.rs  mod.rs
