[package]
name = "webeep"
version = "0.1.0"
authors = ["simoneorlando21 <simone.orlando@mail.polimi.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking","json","cookies"] }
scraper = "0.12.0"
confy = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
